Optimize all wasm files in workflow

--- a/.github/workflows/deploy-wasm.yml
+++ b/.github/workflows/deploy-wasm.yml
@@ -35,7 +35,9 @@ jobs:
       - name: "♻️ Optimize Wasm"
         run: |
           OUT_DIR=composeApp/build/dist/wasmJs/productionExecutable
-          wasm-opt -O3 -o $OUT_DIR/composeApp.wasm $OUT_DIR/composeApp.wasm
+          for wasm in "$OUT_DIR"/*.wasm; do
+            wasm-opt -O3 -o "$wasm" "$wasm"
+          done
       - name: "📄 Configure GitHub Pages"
         uses: actions/configure-pages@v5
       - name: "📤 Upload GitHub Pages artifact"
